[57893] fix: DT delete dialog size on small screen

--- a/src/main/webapp/admin/v9/src/scss/3-base/_modal.scss
+++ b/src/main/webapp/admin/v9/src/scss/3-base/_modal.scss
@@ -889,6 +889,13 @@ div.DTE_Bubble_Background {
                 }
             }
         }
+
+        .DTE_Action_Remove {
+            height: auto !important;
+            width: 70% !important;
+            left: 15% !important;
+            top: 20px !important;
+        }
     }
 }
 
